fix: 悬浮面板的界面大小高度过小时，里面的内容可以overflow

--- a/src/styles.less
+++ b/src/styles.less
@@ -933,7 +933,8 @@
   flex: 1 1 auto;
   flex-direction: column;
   min-height: 0;
-  overflow: hidden;
+  overflow: auto;
+  // overflow: hidden;
 }
 
 .asui-floating-panel-host>.view-content,
